# giz

./: #README.md#  .#README.md  .yo-rc.json  BRAINSTORM.md  Gruntfile.js  Gruntfile.js~  Guardfile  One Note.url  README.md  README.md~  activity.vsdx  bower.json  box2dWorker_sequence.vsdx  box2d_activity.vsdx  braimsotor-draw-workflow.vsdx  gulpfile.babel.js  index.html  jf  objectives.txt  typescript  ~$$activity.~vsdx
.tmp/scripts/: artist.js  artist.js.map
.tmp/styles/: main.css  main.css.map
alpha/: Open Notebook.onetoc2  index.html
alpha/auxiliar/: blackboard.js
alpha/coffee/: Open Notebook.onetoc2  box2dAgent.coffee  box2dPreamble.coffee  box2dWorker.coffee  canvas.coffee  controller.coffee  myscriptDependecies.coffee  myscriptRequests.coffee  myscriptWorker.coffee  tracker.coffee
alpha/ideas/: index.html
alpha/js/: Open Notebook.onetoc2  box2dAgent.js  box2dPreamble.js  box2dWorker.js  canvas.js  controller.js  myscriptDependecies.js  myscriptRequests.js  myscriptWorker.js  tracker.js
app/: index.html
app/ideas/: artist.js  bower.json  circle.js  draft.js  index.html  main.js  polyline.js  shape.js  (+1 more)
blackboard/: index.html  index.html~
box2d/: #Box2dWeb-2.1.a.3.js#
bugs/: Open Notebook.onetoc2
js/: #script.coffee#  #script.js#  .#init.js  .#script.coffee  draft.coffee  draft.js  init.js  model.coffee  model.coffee~  script.coffee  script.coffee~  script.js  script.js~  scriptBlackboard.js  view.coffee
mentalMaps/: Giz.xmind
old/: Guardfile  index.html  typescript
test/: index.html  tse.html
tools/rube/sampleLoaders/SFML-(C++)/src/: CMakeLists.txt  DebugDraw.cpp  DebugDraw.h  DestroyBodyScene.cpp  DestroyBodyScene.h  Open Notebook.onetoc2  PanZoomScene.cpp  PanZoomScene.h  PinballScene.cpp  PinballScene.h  PlanetCuteFixtureUserData.h  PlanetCuteScene.cpp  PlanetCuteScene.h  QueryCallbacks.h  RUBEScene.cpp  RUBEScene.h  Window.cpp  Window.h  b2dJsonImage_SFML.cpp  b2dJsonImage_SFML.h
tools/rube/sampleLoaders/SFML-(C++)/src/rubestuff/: Open Notebook.onetoc2  b2dJson.cpp
tools/rube/sampleLoaders/SFML-(C++)/src/rubestuff/json/: Open Notebook.onetoc2
tools/rube/sampleLoaders/chipmunk-demo-(C++)/chipmunk-source/Demo/: CMakeLists.txt  ChipmunkDebugDraw.c  ChipmunkDemo.c  ChipmunkDemo.h  ContactGraph.c  LoadRube.cpp  Open Notebook.onetoc2
tools/rube/sampleLoaders/chipmunk-demo-(C++)/chipmunk-source/Demo/rubestuff/: Open Notebook.onetoc2
tools/rube/sampleLoaders/chipmunk-demo-(C++)/chipmunk-source/Demo/rubestuff/json/: Open Notebook.onetoc2
(+692 files in other folders)
